I decided to trust (and mimic) Tracker and added a check in TermView::MessageReceived for B_SIMPLE_DATA, so that a drop with the right mouse button is handled correctly. Fixes ticket #5172.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34828 a95241bf-73f2-0310-859d-f6bbb57e9c96